# AuVstBridge

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
Source/: DebugTools.h  MainProcessor.cpp  MainProcessor.h  OscillatorProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorEditor.cpp  ProcessorEditor.h  VSTPluginsHelper.hpp
scripts/: check_version.py
